bug: removed overflow scroll statement

--- a/public/style.css
+++ b/public/style.css
@@ -4,9 +4,9 @@
   font-family: "Poppins", sans-serif;
 }
 
-#main{
+/* #main{
   overflow:scroll;
-}
+} */
 
 h1 {
   font-family: "Spartan";
